# HOT

./: .gitignore  CMakeLists.txt  README.md  README.txt  bin bash.sh  fix_all_radonsafe.sh  fix_and_flash_lvgl.sh  grep-tarkistus.sh  sdkconfig.backup  sdkconfig.defaults  verify_includes.sh
components/lis3dh/: CMakeLists.txt  lis3dh.c  lis3dh.h
components/lis3dh/include/: lis3dh.h
components/mqtt_min/: mqtt_min_config.h
components/no7_vibration/: CMakeLists.txt  no7_vibration.c  no7_vibration.h  no7_vibration.h.c
components/panel_init/: CMakeLists.txt  panel_init.c
components/panel_init/include/: panel_init.h
components/shell/: CMakeLists.txt  console.c.txt  console.h.txt
main/: CMakeLists.txt  app_main.c  azure_upload.cpp  azure_upload.h  ble_scan.cpp  ble_scan.h  ble_scanner.cpp  ble_scanner.h  ble_sensor.cpp  control_data.cpp  control_data.h  git_push_git.sh.txt  idf_component.yml  log_to_sd.cpp  log_to_sd.h  lvgl_display.c  lvgl_display.h  lvgl_gui.cpp  lvgl_gui.h  lvgl_smoketest.cpp  main.c  main.c.txt  main.cpp  main_gui.c  radon_alert.cpp  radon_alert.h  radon_analyzer.cpp  radon_analyzer.h  sd_card.cpp  sd_card.h  sensor_data.h  sensor_manager.c  sensor_manager.h  sensor_reader.c  sensor_reader.h  storage.cpp  storage.hpp  very_low_power_manager.cpp  very_low_power_manager.h  vibra.c  (+1 more)
main/include/: ble_sensor.h  data_structs.h
scripts/: ESP-IDF build artifacts.sh  check_alert_types.sh  fix_git_radonsafe.sh  gitignore  sdcard_test_radon.sh  smart_mount_sdcard_radonsafe.sh
